--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
   },
   "dependencies": {
     "next": "10.1.2",
+    "notion-client": "^4.3.2",
+    "notion-types": "^4.3.0",
+    "notion-utils": "^4.3.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-notion-x": "^4.3.7"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "typescript": "^4.2.3"
   }
 }
