--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-  "name": "personal-blog-notion-cms",
-  "version": "0.1.0",
+  "name": "notion-x-example",
+  "version": "4.3.7",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "analyze": "cross-env ANALYZE=true next build",
+    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
-    "next": "10.1.2",
+    "next": "^10.0.5",
     "notion-client": "^4.3.2",
-    "notion-types": "^4.3.0",
     "notion-utils": "^4.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "rc-dropdown": "^3.2.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-notion-x": "^4.3.7"
   },
   "devDependencies": {
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
-    "typescript": "^4.2.3"
+    "@next/bundle-analyzer": "^9.5.3",
+    "@types/node": "^14.11.5",
+    "@types/react": "^16.9.51",
+    "cross-env": "^7.0.2",
+    "typescript": "^4.0.3"
   }
 }
